--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^16.12.0",
     "react-event-timeline": "^1.6.3",
     "react-scripts": "3.4.0",
+    "react-trivial-timeline": "^1.2.2",
     "recharts": "^1.8.5",
+    "styled-components": "^5.0.1",
     "typeface-roboto": "^0.0.75"
   },
   "scripts": {
