--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-event-timeline": "^1.6.3",
+    "react-json-view": "^1.19.1",
     "react-scripts": "3.4.0",
     "react-trivial-timeline": "^1.2.2",
     "recharts": "^1.8.5",
